[gd_scene load_steps=6 format=3 uid="uid://c6g0si5ay7kuw"]

[ext_resource type="Script" path="res://features/main_menu/main_menu.gd" id="1_rd7dl"]
[ext_resource type="PackedScene" uid="uid://chb8t2a27ragh" path="res://shared/settings_menu/settings_menu.tscn" id="2_hvhod"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_8owej"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_yk6kx"]
as_normal_map = true
noise = SubResource("FastNoiseLite_8owej")

[sub_resource type="Theme" id="Theme_kvp4m"]
Button/constants/outline_size = 16
Button/font_sizes/font_size = 32

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rd7dl")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("NoiseTexture2D_yk6kx")

[node name="ButtonsContainer" type="VBoxContainer" parent="TextureRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -201.0
offset_right = 229.0
offset_bottom = -100.0
grow_vertical = 0

[node name="StartGameButton" type="Button" parent="TextureRect/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme = SubResource("Theme_kvp4m")
text = "Start Game"
flat = true
alignment = 0

[node name="SettingsButton" type="Button" parent="TextureRect/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme = SubResource("Theme_kvp4m")
text = "Settings"
flat = true
alignment = 0

[node name="QuitButton" type="Button" parent="TextureRect/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme = SubResource("Theme_kvp4m")
text = "Quit"
flat = true
alignment = 0

[node name="SettingsMenu" parent="." instance=ExtResource("2_hvhod")]
unique_name_in_owner = true
visible = false
layout_mode = 1
